Fix body styling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,8 @@
     font-family: 'Montserrat', sans-serif !important;
 }
 
+html, body {width: auto!important; overflow-x: hidden!important}
+
 html{
     font-size: 0.8rem;
     scroll-behavior: smooth;
@@ -1096,11 +1098,6 @@ p{
 and (min-device-width : 375px)
 and (max-device-width : 812px)
 and (-webkit-device-pixel-ratio : 3) {
-    body{
-        width:auto;
-        overflow:hidden;
-    }
-
     .brand h1{
         padding-top: 1rem;
         font-size: 2.1rem;
